<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_shoplistFm_05"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="market.ShoppingListFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_shoplistFm_05"
        android:layout_width="0dp"
        android:layout_height="520dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <CheckBox
        android:id="@+id/cb_shoplistSelectAllFm_05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbottonSelectAll"
        android:textColor="@color/textcolor"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="全選" />

    <Button
        android:id="@+id/bt_shoplistRemoveFm_05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:text="@string/bottonRemove"
        android:textColor="@color/textcolor"
        android:textSize="25sp"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cb_shoplistSelectAllFm_05"
        tools:text="移除" />

    <Button
        android:id="@+id/bt_shoplistBuyFm_05"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:text="@string/bottonBuy"
        android:textSize="25sp"
        app:backgroundTint="@color/paycolor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="結帳" />

    <include
        android:id="@+id/include"
        layout="@layout/shoppingcarlist_toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</androidx.constraintlayout.widget.ConstraintLayout>