<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_transaddressFm_05"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="market.TransAddressFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tv_transaddressFm_05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textViewTransAddress"
        android:textColor="@color/textcolor"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="運送地址" />

    <TextView
        android:id="@+id/tv_receiveaddressFm_05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/TextViesReceiveAddress"
        android:textColor="@color/textcolor"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/et_transaddressFM_05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_transaddressFM_05"
        tools:text="收件地址" />

    <Button
        android:id="@+id/bt_transaddressFm_05"
        android:layout_width="415dp"
        android:layout_height="wrap_content"
        android:text="@string/bottonConfirm"
        android:textSize="25sp"
        app:backgroundTint="@color/maincolor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="確認" />

    <EditText
        android:id="@+id/et_transaddressFM_05"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/textcolor"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/tv_receiveaddressFm_05"
        app:layout_constraintTop_toBottomOf="@+id/tv_transaddressFm_05" />

</androidx.constraintlayout.widget.ConstraintLayout>